[package]
name = "redis-game"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-html = { version = "0.2.2", features = ["lazy-init"] }
axum = { version = "0.8.6", features = ["ws"] }
bebop = "3.2.3"
color-eyre = "0.6.5"
futures-util = "0.3.31"
redis = { version = "0.32.7", features = ["tokio-comp", "safe_iterators"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "fs"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
bebop-tools = "3.2.3"
